--- a/kde-base/kdnssd/ChangeLog
+++ b/kde-base/kdnssd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdnssd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/ChangeLog,v 1.93 2008/06/05 21:42:38 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/ChangeLog,v 1.94 2008/06/07 14:58:26 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kdnssd-3.5.8.ebuild,
+  -kdnssd-4.0.2.ebuild, -kdnssd-4.0.3.ebuild:
+  Removed old versions.
 
 *kdnssd-4.0.5 (05 Jun 2008)
 
