--- a/kde-base/keduca/ChangeLog
+++ b/kde-base/keduca/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/keduca
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/keduca/ChangeLog,v 1.82 2008/05/18 17:06:35 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/keduca/ChangeLog,v 1.83 2008/06/07 14:59:16 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -keduca-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> keduca-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
