--- a/kde-base/kdesktop/ChangeLog
+++ b/kde-base/kdesktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesktop
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesktop/ChangeLog,v 1.114 2008/05/18 21:59:53 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesktop/ChangeLog,v 1.115 2008/06/07 15:00:07 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdesktop-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdesktop-3.5.9-r1.ebuild:
   amd64/x86 stable, bug #221063
