--- a/kde-base/kdeutils/ChangeLog
+++ b/kde-base/kdeutils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeutils
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.234 2008/05/18 21:27:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.235 2008/06/07 15:02:47 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeutils-3.5.8-r1.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdeutils-3.5.9-r1.ebuild:
   amd64/x86 stable, bug #221063
