--- a/kde-base/kicker/ChangeLog
+++ b/kde-base/kicker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kicker
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kicker/ChangeLog,v 1.98 2008/05/18 19:06:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kicker/ChangeLog,v 1.99 2008/06/07 15:03:37 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kicker-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kicker-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
