--- a/kde-base/kviewshell/ChangeLog
+++ b/kde-base/kviewshell/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kviewshell
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kviewshell/ChangeLog,v 1.90 2008/05/18 20:55:31 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kviewshell/ChangeLog,v 1.91 2008/06/07 15:04:27 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kviewshell-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kviewshell-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
