--- a/kde-base/klatin/ChangeLog
+++ b/kde-base/klatin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/klatin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/klatin/ChangeLog,v 1.86 2008/05/18 20:30:51 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/klatin/ChangeLog,v 1.87 2008/06/07 15:05:17 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -klatin-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> klatin-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
