--- a/kde-base/ksayit/ChangeLog
+++ b/kde-base/ksayit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksayit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksayit/ChangeLog,v 1.94 2008/05/18 22:09:09 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksayit/ChangeLog,v 1.95 2008/06/07 15:14:44 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -ksayit-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> ksayit-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
