--- a/kde-base/ktalkd/ChangeLog
+++ b/kde-base/ktalkd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ktalkd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ktalkd/ChangeLog,v 1.84 2008/05/18 16:28:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ktalkd/ChangeLog,v 1.85 2008/06/07 15:16:25 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -ktalkd-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> ktalkd-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
