--- a/kde-base/kjsembed/ChangeLog
+++ b/kde-base/kjsembed/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kjsembed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kjsembed/ChangeLog,v 1.85 2008/05/18 20:41:12 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kjsembed/ChangeLog,v 1.86 2008/06/07 15:25:04 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kjsembed-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kjsembed-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
