--- a/kde-base/libkpimexchange/ChangeLog
+++ b/kde-base/libkpimexchange/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkpimexchange
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpimexchange/ChangeLog,v 1.88 2008/05/18 20:54:09 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpimexchange/ChangeLog,v 1.89 2008/06/07 15:29:01 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libkpimexchange-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   libkpimexchange-3.5.9.ebuild:
