--- a/kde-base/kdeaccessibility-iconthemes/ChangeLog
+++ b/kde-base/kdeaccessibility-iconthemes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaccessibility-iconthemes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-iconthemes/ChangeLog,v 1.88 2008/06/05 21:19:25 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-iconthemes/ChangeLog,v 1.89 2008/06/07 15:33:30 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeaccessibility-iconthemes-3.5.8.ebuild,
+  -kdeaccessibility-iconthemes-4.0.2.ebuild,
+  -kdeaccessibility-iconthemes-4.0.3.ebuild:
+  Removed old versions.
 
 *kdeaccessibility-iconthemes-4.0.5 (05 Jun 2008)
 
