--- a/kde-base/qtjava/ChangeLog
+++ b/kde-base/qtjava/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/qtjava
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/qtjava/ChangeLog,v 1.64 2008/05/18 15:21:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/qtjava/ChangeLog,v 1.65 2008/06/07 15:34:16 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -qtjava-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> qtjava-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
