--- a/kde-base/quanta/ChangeLog
+++ b/kde-base/quanta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/quanta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/quanta/ChangeLog,v 1.90 2008/05/18 15:30:14 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/quanta/ChangeLog,v 1.91 2008/06/07 15:35:07 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -quanta-3.5.8-r1.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> quanta-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
