--- a/kde-base/kdemultimedia-kioslaves/ChangeLog
+++ b/kde-base/kdemultimedia-kioslaves/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdemultimedia-kioslaves
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.100 2008/06/05 21:32:44 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.101 2008/06/07 15:38:27 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdemultimedia-kioslaves-3.5.8.ebuild,
+  -kdemultimedia-kioslaves-4.0.2.ebuild,
+  -kdemultimedia-kioslaves-4.0.3.ebuild:
+  Removed old versions.
 
 *kdemultimedia-kioslaves-4.0.5 (05 Jun 2008)
 
