--- a/kde-base/kiconedit/ChangeLog
+++ b/kde-base/kiconedit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kiconedit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kiconedit/ChangeLog,v 1.86 2008/05/18 16:55:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kiconedit/ChangeLog,v 1.87 2008/06/07 15:42:41 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kiconedit-3.5.8.ebuild, -kiconedit-4.0.3.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kiconedit-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
