--- a/dev-util/subversion/ChangeLog
+++ b/dev-util/subversion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.308 2008/06/07 12:51:25 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.309 2008/06/07 15:44:33 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
+  subversion-1.5.0_rc5.ebuild:
+  keyword ~sparc-fbsd
 
   07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
   subversion-1.5.0_rc5.ebuild:
