--- a/kde-base/kfouleggs/ChangeLog
+++ b/kde-base/kfouleggs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kfouleggs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kfouleggs/ChangeLog,v 1.86 2008/05/18 20:17:07 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kfouleggs/ChangeLog,v 1.87 2008/06/07 15:45:17 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kfouleggs-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kfouleggs-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
