--- a/kde-base/kmailcvt/ChangeLog
+++ b/kde-base/kmailcvt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kmailcvt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmailcvt/ChangeLog,v 1.77 2008/05/18 15:08:41 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmailcvt/ChangeLog,v 1.78 2008/06/07 15:54:29 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kmailcvt-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kmailcvt-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
