--- a/x11-misc/remind/ChangeLog
+++ b/x11-misc/remind/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/remind
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/remind/ChangeLog,v 1.30 2008/06/05 21:26:46 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/remind/ChangeLog,v 1.31 2008/06/07 15:56:20 nixnut Exp $
+
+  07 Jun 2008; nixnut <nixnut@gentoo.org> remind-03.01.05.ebuild:
+  Stable on ppc wrt bug 225187
 
   05 Jun 2008; Torsten Veller <tove@gentoo.org> remind-03.01.05.ebuild:
   Add useful docs.
