--- a/kde-base/kdesdk-misc/ChangeLog
+++ b/kde-base/kdesdk-misc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdesdk-misc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.62 2008/06/05 21:37:06 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.63 2008/06/07 15:58:43 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdesdk-misc-3.5.8.ebuild, -kdesdk-misc-4.0.2.ebuild,
+  -kdesdk-misc-4.0.3.ebuild:
+  Removed old versions.
 
 *kdesdk-misc-4.0.5 (05 Jun 2008)
 
