--- a/kde-base/kdeaddons/ChangeLog
+++ b/kde-base/kdeaddons/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeaddons
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.230 2008/05/18 21:45:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.231 2008/06/07 15:59:37 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeaddons-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdeaddons-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
