--- a/kde-base/libkmime/ChangeLog
+++ b/kde-base/libkmime/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkmime
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkmime/ChangeLog,v 1.74 2008/05/18 14:38:26 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkmime/ChangeLog,v 1.75 2008/06/07 16:02:11 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libkmime-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> libkmime-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
