--- a/kde-base/libkscan/ChangeLog
+++ b/kde-base/libkscan/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkscan
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkscan/ChangeLog,v 1.90 2008/06/05 22:39:03 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkscan/ChangeLog,v 1.91 2008/06/07 16:03:00 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libkscan-3.5.8.ebuild, -libkscan-4.0.2.ebuild, -libkscan-4.0.3.ebuild:
+  Removed old versions.
 
 *libkscan-4.0.5 (05 Jun 2008)
 
