--- a/kde-base/knetworkconf/ChangeLog
+++ b/kde-base/knetworkconf/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/knetworkconf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/knetworkconf/ChangeLog,v 1.15 2008/06/05 22:04:18 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/knetworkconf/ChangeLog,v 1.16 2008/06/07 16:09:43 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -knetworkconf-3.5.8.ebuild, -knetworkconf-4.0.2.ebuild,
+  -knetworkconf-4.0.3.ebuild:
+  Removed old versions.
 
 *knetworkconf-4.0.5 (05 Jun 2008)
 
