--- a/kde-base/kate-plugins/ChangeLog
+++ b/kde-base/kate-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kate-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kate-plugins/ChangeLog,v 1.87 2008/05/18 20:39:48 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kate-plugins/ChangeLog,v 1.88 2008/06/07 16:10:32 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kate-plugins-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kate-plugins-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
