--- a/kde-base/libkpimidentities/ChangeLog
+++ b/kde-base/libkpimidentities/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkpimidentities
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpimidentities/ChangeLog,v 1.88 2008/05/18 21:28:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpimidentities/ChangeLog,v 1.89 2008/06/07 16:12:13 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libkpimidentities-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   libkpimidentities-3.5.9.ebuild:
