--- a/kde-base/artsplugin-akode/ChangeLog
+++ b/kde-base/artsplugin-akode/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-akode
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-akode/ChangeLog,v 1.67 2008/05/18 20:47:09 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-akode/ChangeLog,v 1.68 2008/06/07 16:14:54 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -artsplugin-akode-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   artsplugin-akode-3.5.9.ebuild:
