--- a/kde-base/kdeartwork-sounds/ChangeLog
+++ b/kde-base/kdeartwork-sounds/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdeartwork-sounds
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-sounds/ChangeLog,v 1.71 2008/06/05 21:25:33 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-sounds/ChangeLog,v 1.72 2008/06/07 16:21:35 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeartwork-sounds-3.5.8.ebuild, -kdeartwork-sounds-4.0.2.ebuild,
+  -kdeartwork-sounds-4.0.3.ebuild:
+  Removed old versions.
 
 *kdeartwork-sounds-4.0.5 (05 Jun 2008)
 
