--- a/kde-base/kdemultimedia/ChangeLog
+++ b/kde-base/kdemultimedia/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.276 2008/05/18 21:42:42 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.277 2008/06/07 16:22:31 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdemultimedia-3.5.8-r1.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdemultimedia-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
