--- a/kde-base/atlantik/ChangeLog
+++ b/kde-base/atlantik/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/atlantik
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/atlantik/ChangeLog,v 1.87 2008/05/18 19:19:34 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/atlantik/ChangeLog,v 1.88 2008/06/07 16:25:03 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -atlantik-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> atlantik-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
