--- a/sys-libs/ss/ChangeLog
+++ b/sys-libs/ss/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.61 2008/05/26 08:35:49 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.62 2008/06/07 16:31:47 vapier Exp $
+
+*ss-1.40.10 (07 Jun 2008)
+
+  07 Jun 2008; Mike Frysinger <vapier@gentoo.org> +ss-1.40.10.ebuild:
+  Version bump #225161 by Krzysztof Olędzki.
 
   26 May 2008; Raúl Porcel <armin76@gentoo.org> ss-1.40.8.ebuild:
   ia64 stable wrt #213588
