--- a/sys-fs/btrfs/ChangeLog
+++ b/sys-fs/btrfs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/btrfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.3 2008/05/29 16:59:52 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.4 2008/06/07 16:38:35 lavajoe Exp $
+
+*btrfs-0.15-r1 (07 Jun 2008)
+
+  07 Jun 2008; Joe Peterson <lavajoe@gentoo.org>
+  +files/btrfs-0.15-acl-disable.patch, +btrfs-0.15-r1.ebuild:
+  Patch to fix preserving file/dir modes by disabling ACLs
 
 *btrfs-0.15 (29 May 2008)
 
