--- a/sci-libs/lapack-atlas/ChangeLog
+++ b/sci-libs/lapack-atlas/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/lapack-atlas
 # Copyright 2004-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-atlas/ChangeLog,v 1.63 2008/04/23 08:37:49 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-atlas/ChangeLog,v 1.64 2008/06/07 16:44:36 markusle Exp $
+
+*lapack-atlas-3.8.2 (07 Jun 2008)
+
+  07 Jun 2008; Markus Dittrich <markusle@gentoo.org>
+  +lapack-atlas-3.8.2.ebuild:
+  Version bump.
 
   23 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org>
   lapack-atlas-3.8.0.ebuild, lapack-atlas-3.8.1.ebuild:
