--- a/sys-libs/ss/ChangeLog
+++ b/sys-libs/ss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.62 2008/06/07 16:31:47 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.63 2008/06/07 16:51:27 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> ss-1.40.9.ebuild:
+  Stable for HPPA (bug #225239).
 
 *ss-1.40.10 (07 Jun 2008)
 
