--- a/sys-libs/com_err/ChangeLog
+++ b/sys-libs/com_err/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/com_err
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.68 2008/06/07 16:30:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.69 2008/06/07 16:51:35 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.9.ebuild:
+  Stable for HPPA (bug #225239).
 
 *com_err-1.40.10 (07 Jun 2008)
 
