--- a/net-analyzer/openvas-plugins/ChangeLog
+++ b/net-analyzer/openvas-plugins/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/openvas-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-plugins/ChangeLog,v 1.1 2008/02/08 13:19:34 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-plugins/ChangeLog,v 1.2 2008/06/07 17:12:08 hanno Exp $
+
+*openvas-plugins-1.0.1 (07 Jun 2008)
+
+  07 Jun 2008; Hanno Boeck <hanno@gentoo.org> +openvas-plugins-1.0.1.ebuild:
+  Version bump.
 
   08 Feb 2008; Hanno Boeck <hanno@gentoo.org> ChangeLog:
   Initial commit of openvas.
