--- a/kde-base/kmtrace/ChangeLog
+++ b/kde-base/kmtrace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmtrace
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.61 2008/06/07 12:17:12 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.62 2008/06/07 19:26:31 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> kmtrace-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
   -kmtrace-3.5.8.ebuild:
