--- a/virtual/c++-tr1-memory/ChangeLog
+++ b/virtual/c++-tr1-memory/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/c++-tr1-memory
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/c++-tr1-memory/ChangeLog,v 1.6 2007/12/25 14:18:02 phreak Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/c++-tr1-memory/ChangeLog,v 1.7 2008/06/07 19:44:54 dev-zero Exp $
+
+  07 Jun 2008; Tiziano Müller <dev-zero@gentoo.org>
+  c++-tr1-memory-0.ebuild:
+  Changed version for boost-dependency to 1.34.0 (bug #197843)
 
   25 Dec 2007; Christian Heim <phreak@gentoo.org> ChangeLog:
   Removing kugelfang from metadata.xml as per #46972.
