--- a/x11-themes/qtcurve-qt4/ChangeLog
+++ b/x11-themes/qtcurve-qt4/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/qtcurve-qt4
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve-qt4/ChangeLog,v 1.26 2008/06/07 17:11:51 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve-qt4/ChangeLog,v 1.27 2008/06/07 20:42:49 yngwin Exp $
+
+  07 Jun 2008; Ben de Groot <yngwin@gentoo.org>
+  qtcurve-qt4-0.59.3-r1.ebuild:
+  Adding another fix to prevent linking to kde4 when kde useflag is
+  disabled, contributed by jmbsvicetto.
 
 *qtcurve-qt4-0.59.3-r1 (07 Jun 2008)
 
