--- a/kde-base/kdesdk-kfile-plugins/ChangeLog
+++ b/kde-base/kdesdk-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-kfile-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kfile-plugins/ChangeLog,v 1.65 2008/06/07 12:18:51 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kfile-plugins/ChangeLog,v 1.66 2008/06/07 21:30:43 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org>
+  kdesdk-kfile-plugins-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
   -kdesdk-kfile-plugins-3.5.8.ebuild:
