--- a/kde-base/kbugbuster/ChangeLog
+++ b/kde-base/kbugbuster/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kbugbuster
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.82 2008/06/07 14:19:47 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.83 2008/06/08 00:51:51 jer Exp $
+
+  08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kbugbuster-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
   -kbugbuster-3.5.8.ebuild, -kbugbuster-4.0.2.ebuild,
