--- a/net-irc/conspire/ChangeLog
+++ b/net-irc/conspire/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/conspire
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/conspire/ChangeLog,v 1.4 2008/02/26 15:18:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/conspire/ChangeLog,v 1.5 2008/06/08 03:50:11 chainsaw Exp $
+
+*conspire-0.20_beta1 (08 Jun 2008)
+
+  08 Jun 2008; <chainsaw@gentoo.org> conspire-0.12.0.ebuild,
+  conspire-0.13.1.ebuild, +conspire-0.20_beta1.ebuild:
+  Version bump. Properly separate out DEPENDs.
 
   26 Feb 2008; Raúl Porcel <armin76@gentoo.org> conspire-0.13.1.ebuild:
   Add ~ia64/~sparc
