--- a/kde-base/kspy/ChangeLog
+++ b/kde-base/kspy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kspy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kspy/ChangeLog,v 1.56 2008/06/07 11:09:26 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kspy/ChangeLog,v 1.57 2008/06/08 05:53:35 jer Exp $
+
+  08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kspy-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kspy-3.5.8.ebuild:
   Removed old versions.
