--- a/kde-base/kdesdk/ChangeLog
+++ b/kde-base/kdesdk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesdk
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk/ChangeLog,v 1.170 2008/06/07 14:57:35 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk/ChangeLog,v 1.171 2008/06/08 06:12:37 jer Exp $
+
+  08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kdesdk-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kdesdk-3.5.8.ebuild:
   Removed old versions.
