--- a/dev-util/dialogblocks/ChangeLog
+++ b/dev-util/dialogblocks/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/dialogblocks
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.14 2008/02/13 14:48:46 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.15 2008/06/08 08:33:58 mrness Exp $
+
+*dialogblocks-4.25 (08 Jun 2008)
+
+  08 Jun 2008; Alin Năstac <mrness@gentoo.org> -dialogblocks-4.21.ebuild,
+  +dialogblocks-4.25.ebuild:
+  Version bump.
 
 *dialogblocks-4.22 (13 Feb 2008)
 
