--- a/mail-filter/dk-milter/ChangeLog
+++ b/mail-filter/dk-milter/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for mail-filter/dk-milter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/dk-milter/ChangeLog,v 1.12 2008/01/29 18:33:01 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/dk-milter/ChangeLog,v 1.13 2008/06/08 09:26:53 mrness Exp $
+
+*dk-milter-1.0.0 (08 Jun 2008)
+
+  08 Jun 2008; Alin Năstac <mrness@gentoo.org> +dk-milter-1.0.0.ebuild:
+  Version bump.
 
   29 Jan 2008; Alin Năstac <mrness@gentoo.org> dk-milter-0.6.0.ebuild:
   Remove libmilter atom from run-time dependencies.
