--- a/app-text/knowit/ChangeLog
+++ b/app-text/knowit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/knowit
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/knowit/ChangeLog,v 1.17 2007/02/04 00:04:30 flameeyes Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/knowit/ChangeLog,v 1.18 2008/06/08 09:48:31 bluebird Exp $
+
+  08 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> knowit-0.10.ebuild:
+  stable on sparc, thanks to Tiago Cunha for testing in bug #225267
 
   04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
