--- a/mail-filter/dkim-milter/ChangeLog
+++ b/mail-filter/dkim-milter/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for mail-filter/dkim-milter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/dkim-milter/ChangeLog,v 1.20 2008/05/03 00:02:31 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/dkim-milter/ChangeLog,v 1.21 2008/06/08 09:52:59 mrness Exp $
+
+  08 Jun 2008; Alin Năstac <mrness@gentoo.org>
+  -files/dkim-milter-2.4.3-gentoo.patch,
+  -files/dkim-milter-2.4.4-gentoo.patch,
+  -files/dkim-milter-2.5.2-gentoo.patch,
+  +files/dkim-milter-2.5.5-gentoo.patch, -dkim-milter-2.4.3.ebuild,
+  -dkim-milter-2.4.4.ebuild, -dkim-milter-2.5.2.ebuild,
+  dkim-milter-2.5.5.ebuild:
+  Remove old versions.
 
 *dkim-milter-2.5.5 (02 May 2008)
 
