--- a/sys-libs/com_err/ChangeLog
+++ b/sys-libs/com_err/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/com_err
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.69 2008/06/07 16:51:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/ChangeLog,v 1.70 2008/06/08 12:11:37 nixnut Exp $
+
+  08 Jun 2008; nixnut <nixnut@gentoo.org> com_err-1.40.9.ebuild:
+  Stable on ppc wrt bug 225239
 
   07 Jun 2008; Jeroen Roovers <jer@gentoo.org> com_err-1.40.9.ebuild:
   Stable for HPPA (bug #225239).
