--- a/sys-libs/ss/ChangeLog
+++ b/sys-libs/ss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.63 2008/06/07 16:51:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.64 2008/06/08 12:13:10 nixnut Exp $
+
+  08 Jun 2008; nixnut <nixnut@gentoo.org> ss-1.40.9.ebuild:
+  Stable on ppc wrt bug 225239
 
   07 Jun 2008; Jeroen Roovers <jer@gentoo.org> ss-1.40.9.ebuild:
   Stable for HPPA (bug #225239).
