--- a/dev-php5/magickwand/ChangeLog
+++ b/dev-php5/magickwand/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/magickwand
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/magickwand/ChangeLog,v 1.6 2008/06/03 03:20:33 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/magickwand/ChangeLog,v 1.7 2008/06/08 13:31:32 hoffie Exp $
+
+  08 Jun 2008; Christian Hoffmann <hoffie@gentoo.org>
+  magickwand-1.0.7.ebuild:
+  bump imagemagick dependency to 6.3.9.7, bug 215671
 
 *magickwand-1.0.7 (03 Jun 2008)
 
