--- a/kde-base/kdesdk/ChangeLog
+++ b/kde-base/kdesdk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesdk
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk/ChangeLog,v 1.171 2008/06/08 06:12:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk/ChangeLog,v 1.172 2008/06/08 15:07:48 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kdesdk-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kdesdk-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
