Install env.d file containing HG variable needed for hgk. (Portage version: 2.1.5.4)

--- a/dev-util/mercurial/ChangeLog
+++ b/dev-util/mercurial/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/mercurial
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/ChangeLog,v 1.69 2008/06/09 19:29:09 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/ChangeLog,v 1.70 2008/06/09 19:34:22 nelchael Exp $
+
+  09 Jun 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  mercurial-1.0.1-r1.ebuild:
+  Install env.d file containing HG variable needed for hgk.
 
 *mercurial-1.0.1-r1 (09 Jun 2008)
 
